WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222592
IPC stream feature should use client/server naming instead of sender/receiver
https://bugs.webkit.org/show_bug.cgi?id=222592
Summary
IPC stream feature should use client/server naming instead of sender/receiver
Kimmo Kinnunen
Reported
2021-03-02 04:22:44 PST
IPC stream feature should use client/server naming instead of sender/receiver Originally the feature was implemented with names using "sender" and "receiver". However, at the landing time the naming was changed to use "client" and "server" to follow the existing IPC::Connection. However, not all the names were changed consistently. Change all the names to use "client" instead of "sender" and "server" instead of "receiver".
Attachments
Patch
(23.92 KB, patch)
2021-03-02 04:26 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(24.70 KB, patch)
2021-03-02 06:18 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2021-03-02 04:26:07 PST
Created
attachment 421920
[details]
Patch
Kimmo Kinnunen
Comment 2
2021-03-02 06:18:52 PST
Created
attachment 421928
[details]
Patch
Antti Koivisto
Comment 3
2021-03-04 00:36:47 PST
rs=me
EWS
Comment 4
2021-03-04 01:09:45 PST
Committed
r273878
: <
https://commits.webkit.org/r273878
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 421928
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-03-04 01:10:21 PST
<
rdar://problem/75025379
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug